FE: Fix content layout shift

--- a/src/components/base/navbar/burger/burger.module.scss
+++ b/src/components/base/navbar/burger/burger.module.scss
@@ -2,13 +2,7 @@
   height: 50px;
   width: 100%;
 
-  position: absolute;
-  top: 0;
-  left: 0;
-
   background-color: var(--color-primary);
-
-  z-index: 99999;
 
   display: flex;
   justify-content: space-between;
