--- a/src/components/base/navbar/navbar.module.scss
+++ b/src/components/base/navbar/navbar.module.scss
@@ -1,5 +1,5 @@
 .navbar {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
 
@@ -22,6 +22,12 @@
     flex-grow: 1;
     justify-content: space-between;
     height: max-content;
+
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   @media screen and (max-width: 576px) {
@@ -34,5 +40,12 @@
 
   @media screen and (max-width: 576px) {
     display: block;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+
+    z-index: 100;
   }
 }
