--- a/src/components/base/wishlist/list/list-item/list-item-body/list-item-body.module.scss
+++ b/src/components/base/wishlist/list/list-item/list-item-body/list-item-body.module.scss
@@ -73,11 +73,6 @@
   align-items: center;
 }
 
-.editing {
-  border-radius: var(--radius-sm) 0 0 var(--radius-sm);
-  width: calc(100% - 80px);
-}
-
 .fav {
   display: flex;
   position: absolute;
