--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,8 +15,6 @@ body {
     background-color: var(--color-accent);
     color: #ffffff;
   }
-
-  height: 100vh;
 }
 
 html {
